Add about, boosters, contact, experience, gallery, play and  progression sections

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Slotreign</title>
     <meta name="robots" content="index, follow" />
-    <link rel="canonical" href="https://slotplanetx.online" />
+    <link rel="canonical" href="https://slotreign.pro" />
     <link rel="icon" type="image/png" href="/favicon.png" />
     <link rel="stylesheet" href="./scss/styles.scss" />
   </head>
@@ -18,8 +18,8 @@
       <load ="partials/play.html" />
       <load ="partials/boosters.html" />
       <load ="partials/progression.html" />
-      <load ="partials/style.html" />
-      <load ="partials/faq.html" />
+      <load ="partials/gallery.html" />
+      <load ="partials/experience.html" />
       <load ="partials/contact.html" />
     </main>
     <load ="partials/footer.html" />
